Hide progress bar and status bar until template engine has rendered everything - this avoids visible template brackets on initial load.

--- a/style.css
+++ b/style.css
@@ -260,6 +260,10 @@ ul {
 	border: 3px dashed #2eb9ce;
 }
 
+[v-cloak] {
+	display: none;
+}
+
 .hidden {
 	display: none;
 }
